lab/kubernetes/domino/domino11.yml
apiVersion: v1
kind: Pod
metadata:
  name: domino11
  labels:
    app: hcl-domino

spec:
  imagePullSecrets:
  - name: regcred
  containers:

  - env:
    - name: LANG
      value: en_US.UTF-8
    - name: OrganizationPassword
      value: domino4ever
    - name: DominoDomainName
      value: Acme
    - name: AdminPassword
      value: domino4ever
    - name: OrganizationName
      value: Acme
    - name: ServerName
      value: domino-acme-01
    - name: AdminFirstName
      value: John
    - name: AdminLastName
      value: Doe
    - name: DOMINO_DOCKER_STDOUT
      value: "yes"

    name: domino11
    image: registry.domino-lab.net:5000/hclcom/domino:latest11
    securityContext:
      capabilities:
        add: ["SYS_PTRACE"]

    volumeMounts:
    - name: domino-data
      mountPath: /local

    ports:
    - containerPort: 1352
      protocol: TCP
    - containerPort: 80
      protocol: TCP
    - containerPort: 443
      protocol: TCP

  volumes:
  - name: domino-data
    persistentVolumeClaim:
      claimName: local-path-pvc
