lab/kubernetes/domino/domino12_auto_config.yml
apiVersion: v1
kind: Pod

metadata:
  name: domino12
  namespace: default

  labels:
    app: hcl-domino

spec:
  imagePullSecrets:
  - name: regcred

  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    fsGroup: 1000
    fsGroupChangePolicy: "OnRootMismatch"

  containers:

  - env:
    - name: LANG
      value: "en_US.UTF-8"

    - name: DOMINO_DOCKER_STDOUT
      value: "yes"

    - name: SetupAutoConfigure
      value: "1"

    - name: SetupAutoConfigureParams
      value: "/etc/domino-cfg/auto_config.json"

    - name: DominoConfigRestartWaitTime 
      value: "30"

    - name: DominoConfigRestartWaitString 
      value: "Server started on physical node"

    name: domino12
    image: registry.domino-lab.net:5000/hclcom/domino:latest

    securityContext:
      capabilities:
        add: ["SYS_PTRACE"]
      runAsNonRoot: true
      runAsUser: 1000

    volumeMounts:
    - name: domino-data
      mountPath: /local

    - name: domino-cfg
      mountPath: /etc/domino-cfg

    ports:
    - containerPort: 1352
      protocol: TCP
    - containerPort: 80
      protocol: TCP
    - containerPort: 443
      protocol: TCP

    livenessProbe:
      exec:
        command:
        - /domino_docker_healthcheck.sh

      initialDelaySeconds: 60
      periodSeconds: 20

    readinessProbe:
      exec:
        command:
        - /domino_docker_healthcheck.sh
        - ready

      initialDelaySeconds: 60
      periodSeconds: 20


  # this init container is a work-around to change file-system permissions for some local stoarge providers
  volumes:
  - name: domino-data
    persistentVolumeClaim:
      claimName: local-path-pvc

  - name: domino-cfg
    configMap:
      name: domino12-cfg
