lab/kubernetes/domino/service_http.yml
apiVersion: v1
kind: Service
metadata:
  name: domino-http
spec:
  selector:
    app: hcl-domino
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
