lab/kubernetes/domino/ingress_http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: domino-http
  namespace: default

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: master.domino-lab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domino-http 
                port:
                  number: 80
